--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,7 +5,7 @@ sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 sonar.sources=src
 sonar.tests=e2e/src/test
-sonar.test.inclusions=**/*-spec.ts
+sonar.test.inclusions=spec.ts
 
 
 #sonar.host.url=http://localhost:9000
