--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~9.1.0",
     "@angular/router": "~9.1.0",
     "@ng-bootstrap/ng-bootstrap": "^9.0.2",
+    "jasmine-reporters": "^2.4.0",
     "ngx-cookie-service": "^2.2.0",
     "ngx-toastr": "^13.2.1",
     "rxjs": "~6.5.5",
