--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,7 @@ sonar.projectDescription=ADN Solicitud de aumentos salarial FrontEnd.
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 sonar.sources=src
-sonar.tests=e2e/src/test
+sonar.tests=e2e
 sonar.test.inclusions=./src/**/*.e2e-spec.ts
 
 
